--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   position: fixed;
   right: 0;
   bottom: 0;
+  width: 100vw;
 }
 
 video {
@@ -116,9 +117,12 @@ li span {
 /* Media Query: Large Smartphone (Vertical) */
 @media screen and (max-width: 600px) {
   .video-background {
+    height: 100vh;
+    width: 100vw;
   }
 
   video {
+    object-fit: cover;
     margin-top: -1px;
   }
 
