--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@ video {
   position: fixed;
   left: 0;
   top: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(194, 174, 174, 0.5);
 }
 
 /* Container */
@@ -123,6 +126,7 @@ li span {
 
   video {
     object-fit: cover;
+    object-position: 70%;
     margin-top: -1px;
   }
 
