--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@ video {
   top: 20px;
 }
 
+#alert-text {
+  color: red;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 h1 {
   font-size: 35px;
   text-align: center;
